--- a/test/integration/targets/aci_encap_pool/tasks/vxlan.yml
+++ b/test/integration/targets/aci_encap_pool/tasks/vxlan.yml
@@ -35,7 +35,7 @@
   assert:
     that:
       - create_vxlan.changed == true
-      - create_vxlan.original == []
+      - create_vxlan.previous == []
       - create_vxlan.config == create_vxlan_check_mode.config
 
 - name: create vxlan pool again - idempotency works
@@ -47,7 +47,7 @@
   assert:
     that:
       - idempotent_vxlan.changed == false
-      - 'idempotent_vxlan.original.0.fvnsVxlanInstP.attributes.name == "anstest"'
+      - 'idempotent_vxlan.previous.0.fvnsVxlanInstP.attributes.name == "anstest"'
       - idempotent_vxlan.config == {}
 
 - name: update vxlan pool - update works
@@ -97,7 +97,7 @@
   assert:
     that:
       - query_vxlan.changed == false
-      - query_vxlan.original | length == 1
+      - query_vxlan.previous | length == 1
       - '"infra/vxlanns-anstest.json" in query_vxlan.url'
 
 - name: get created static vlan pool - get class works
@@ -110,7 +110,7 @@
   assert:
     that:
       - query_vxlan_all.changed == false
-      - query_vxlan_all.original | length > 1
+      - query_vxlan_all.previous | length > 1
       - '"class/fvnsVxlanInstP.json" in query_vxlan_all.url'
 
 - name: delete vxlan pool - check mode works
@@ -123,7 +123,7 @@
   assert:
     that:
       - delete_vxlan_check_mode.changed == true
-      - delete_vxlan_check_mode.original != []
+      - delete_vxlan_check_mode.previous != []
 
 - name: delete vxlan pool - deletion works
   aci_encap_pool:
@@ -134,8 +134,8 @@
   assert:
     that:
       - delete_vxlan.changed == true
-      - delete_vxlan.original == delete_vxlan_check_mode.original
-      - delete_vxlan.original.0.fvnsVxlanInstP.attributes.name == "anstest"
+      - delete_vxlan.previous == delete_vxlan_check_mode.previous
+      - delete_vxlan.previous.0.fvnsVxlanInstP.attributes.name == "anstest"
 
 - name: delete vxlan pool again - idempotency works
   aci_encap_pool:
@@ -153,7 +153,7 @@
   assert:
     that:
       - delete_vxlan_idempotent.changed == false
-      - delete_vxlan_idempotent.original == []
+      - delete_vxlan_idempotent.previous == []
 
 - name: delete vxlan pool - cleanup
   aci_encap_pool:
