--- a/test/integration/targets/aci_ap/tasks/main.yml
+++ b/test/integration/targets/aci_ap/tasks/main.yml
@@ -61,11 +61,11 @@
     that:
       - ap_present_check_mode.changed == true
       - ap_present.changed == true
-      - ap_present.original == []
+      - ap_present.previous == []
       - ap_present.config == ap_present_check_mode.config
       - 'ap_present.config == {"fvAp": {"attributes": {"descr": "Ansible Test", "name": "anstest"}}}'
       - ap_present_idempotent.changed == false
-      - ap_present_idempotent.original != []
+      - ap_present_idempotent.previous != []
       - ap_present_idempotent.config == {}
       - ap_present_update.changed == true
       - 'ap_present_update.config.fvAp.attributes == {"descr": "Ansible Test Update"}'
@@ -101,21 +101,21 @@
   assert:
     that:
       - query_ap.changed == false
-      - query_ap.original | length == 1
-      - 'query_ap.original.0.fvAp.attributes.name == "anstest"'
+      - query_ap.previous | length == 1
+      - 'query_ap.previous.0.fvAp.attributes.name == "anstest"'
       - '"tn-anstest/ap-anstest.json" in query_ap.url'
       - query_ap_tenant.changed == false
-      - query_ap_tenant.original | length == 1
-      - query_ap_tenant.original.0.fvTenant.children | length == 2
+      - query_ap_tenant.previous | length == 1
+      - query_ap_tenant.previous.0.fvTenant.children | length == 2
       - '"rsp-subtree-class=fvAp" in query_ap_tenant.filter_string'
       - '"tn-anstest.json" in query_ap_tenant.url'
       - query_ap_ap.changed == false
-      - query_ap_ap.original != []
-      - query_ap_ap.original.0.fvAp is defined
+      - query_ap_ap.previous != []
+      - query_ap_ap.previous.0.fvAp is defined
       - '"query-target-filter=eq(fvAp.name, \"anstest\")" in query_ap_ap.filter_string'
       - '"class/fvAp.json" in query_ap_ap.url'
       - query_all.changed == false
-      - query_all.original | length > 1
+      - query_all.previous | length > 1
       - '"class/fvAp.json" in query_all.url'
 
 - name: delete ap - check_mode works
@@ -151,12 +151,12 @@
   assert:
     that:
       - ap_delete_check_mode.changed == true
-      - ap_delete_check_mode.original != []
+      - ap_delete_check_mode.previous != []
       - '"tn-anstest/ap-anstest.json" in ap_delete_check_mode.url'
       - ap_delete.changed == true
-      - ap_delete.original == ap_delete_check_mode.original
+      - ap_delete.previous == ap_delete_check_mode.previous
       - ap_delete_idempotent.changed == false
-      - ap_delete_idempotent.original == []
+      - ap_delete_idempotent.previous == []
       - ap_delete_missing_param.failed == true
       - 'ap_delete_missing_param.msg == "state is absent but all of the following are missing: tenant"'
 
