--- a/test/integration/targets/aci_contract_subject_to_filter/tasks/main.yml
+++ b/test/integration/targets/aci_contract_subject_to_filter/tasks/main.yml
@@ -85,14 +85,14 @@
   assert:
     that:
       - subject_filter_present_check_mode.changed == true
-      - subject_filter_present_check_mode.original == []
+      - subject_filter_present_check_mode.previous == []
       - 'subject_filter_present_check_mode.config == {"vzRsSubjFiltAtt": {"attributes": {"directives": "log", "tnVzFilterName": "anstest"}}}'
       - subject_filter_present.changed == true
-      - subject_filter_present.original == []
+      - subject_filter_present.previous == []
       - subject_filter_present.config == subject_filter_present_check_mode.config
       - subject_filter_present_2.changed == true
       - subject_filter_present_idempotent.changed == false
-      - subject_filter_present_idempotent.original != []
+      - subject_filter_present_idempotent.previous != []
       - subject_filter_update.changed == true
       - 'subject_filter_update.config.vzRsSubjFiltAtt.attributes == {"directives": ""}'
       - present_missing_param.failed == true
@@ -115,10 +115,10 @@
   assert:
     that:
       - query_all.changed == false
-      - query_all.original | length > 1
-      - query_all.original.0.vzRsSubjFiltAtt is defined
+      - query_all.previous | length > 1
+      - query_all.previous.0.vzRsSubjFiltAtt is defined
       - query_binding.changed == false
-      - query_binding.original != []
+      - query_binding.previous != []
 
 - name: delete subject filter binding - check mode works
   aci_contract_subject_to_filter: &aci_subject_filter_absent
@@ -154,11 +154,11 @@
     that:
       - subject_filter_absent_check_mode.changed == true
       - subject_filter_absent_check_mode.proposed == {}
-      - subject_filter_absent_check_mode.original != []
+      - subject_filter_absent_check_mode.previous != []
       - subject_filter_absent.changed == true
-      - subject_filter_absent.original != []
+      - subject_filter_absent.previous != []
       - subject_filter_absent_idempotent.changed == false
-      - subject_filter_absent_idempotent.original == []
+      - subject_filter_absent_idempotent.previous == []
       - absent_missing_param.failed == true
       - 'absent_missing_param.msg == "state is absent but all of the following are missing: filter"'
 
