--- a/test/integration/targets/aci_encap_pool/tasks/vlan.yml
+++ b/test/integration/targets/aci_encap_pool/tasks/vlan.yml
@@ -41,7 +41,7 @@
   assert:
     that:
       - create_static.changed == true
-      - create_static.original == []
+      - create_static.previous == []
       - create_static.config == create_check_mode.config
 
 - name: create dynamic vlan pool - creation works
@@ -55,7 +55,7 @@
   assert:
     that:
       - create_dynamic.changed == true
-      - create_dynamic.original == []
+      - create_dynamic.previous == []
       - 'create_dynamic.config == {"fvnsVlanInstP": {"attributes": {"allocMode": "dynamic", "descr": "Ansible Test", "name": "anstest"}}}'
 
 - name: create static vlan pool again - idempotency works
@@ -67,7 +67,7 @@
   assert:
     that:
       - idempotent_static.changed == false
-      - 'idempotent_static.original == [{"fvnsVlanInstP": {"attributes": {"allocMode": "static", "descr": "Ansible Test", "dn": "uni/infra/vlanns-[anstest]-static", "name": "anstest", "nameAlias": "", "ownerKey": "", "ownerTag": ""}}}]'
+      - 'idempotent_static.previous == [{"fvnsVlanInstP": {"attributes": {"allocMode": "static", "descr": "Ansible Test", "dn": "uni/infra/vlanns-[anstest]-static", "name": "anstest", "nameAlias": "", "ownerKey": "", "ownerTag": ""}}}]'
       - idempotent_static.config == {}
 
 - name: create dynamic vlan pool again - idempotency works
@@ -79,7 +79,7 @@
   assert:
     that:
       - idempotent_dynamic.changed == false
-      - 'idempotent_dynamic.original == [{"fvnsVlanInstP": {"attributes": {"allocMode": "dynamic", "descr": "Ansible Test", "dn": "uni/infra/vlanns-[anstest]-dynamic", "name": "anstest", "nameAlias": "", "ownerKey": "", "ownerTag": ""}}}]'
+      - 'idempotent_dynamic.previous == [{"fvnsVlanInstP": {"attributes": {"allocMode": "dynamic", "descr": "Ansible Test", "dn": "uni/infra/vlanns-[anstest]-dynamic", "name": "anstest", "nameAlias": "", "ownerKey": "", "ownerTag": ""}}}]'
       - idempotent_dynamic.config == {}
  
 - name: update static vlan pool - update works
@@ -158,7 +158,7 @@
     that:
       - get_all_pools.changed == false
       - get_all_pools.method == "GET"
-      - get_all_pools.original | length > 1
+      - get_all_pools.previous | length > 1
 
 - name: get created static vlan pool - get mo works
   aci_encap_pool:
@@ -171,9 +171,9 @@
     that:
       - get_static_pool.changed == false
       - get_static_pool.method == "GET"
-      - get_static_pool.original | length == 1
-      - get_static_pool.original.0.fvnsVlanInstP.attributes.allocMode == "static"
-      - get_static_pool.original.0.fvnsVlanInstP.attributes.name == "anstest"
+      - get_static_pool.previous | length == 1
+      - get_static_pool.previous.0.fvnsVlanInstP.attributes.allocMode == "static"
+      - get_static_pool.previous.0.fvnsVlanInstP.attributes.name == "anstest"
 
 - name: get created dynamic vlan pool - get mo works
   aci_encap_pool:
@@ -186,9 +186,9 @@
     that:
       - get_dynamic_pool.changed == false
       - get_dynamic_pool.method == "GET"
-      - get_dynamic_pool.original | length == 1
-      - get_dynamic_pool.original.0.fvnsVlanInstP.attributes.allocMode == "dynamic"
-      - get_dynamic_pool.original.0.fvnsVlanInstP.attributes.name == "anstest"
+      - get_dynamic_pool.previous | length == 1
+      - get_dynamic_pool.previous.0.fvnsVlanInstP.attributes.allocMode == "dynamic"
+      - get_dynamic_pool.previous.0.fvnsVlanInstP.attributes.name == "anstest"
 
 - name: get created dynamic vlan pool - get mo works
   aci_encap_pool:
@@ -214,8 +214,8 @@
     that:
       - delete_static.changed == true
       - delete_static.method == "DELETE"
-      - delete_static.original.0.fvnsVlanInstP.attributes.allocMode == "static"
-      - delete_static.original.0.fvnsVlanInstP.attributes.name == "anstest"
+      - delete_static.previous.0.fvnsVlanInstP.attributes.allocMode == "static"
+      - delete_static.previous.0.fvnsVlanInstP.attributes.name == "anstest"
 
 - name: delete dynamic vlan pool - check mode works
   aci_encap_pool:
@@ -238,8 +238,8 @@
     that:
       - delete_dynamic.changed == true
       - delete_dynamic.method == "DELETE"
-      - delete_dynamic.original.0.fvnsVlanInstP.attributes.allocMode == "dynamic"
-      - delete_dynamic.original.0.fvnsVlanInstP.attributes.name == "anstest"
+      - delete_dynamic.previous.0.fvnsVlanInstP.attributes.allocMode == "dynamic"
+      - delete_dynamic.previous.0.fvnsVlanInstP.attributes.name == "anstest"
 
 - name: delete static vlan pool again - idempotency works
   aci_encap_pool:
@@ -250,7 +250,7 @@
   assert:
     that:
       - idempotent_delete_static.changed == false
-      - idempotent_delete_static.original == []
+      - idempotent_delete_static.previous == []
 
 - name: delete dynamic vlan pool again - idempotency works
   aci_encap_pool:
@@ -261,4 +261,4 @@
   assert:
     that:
       - idempotent_delete_dynamic.changed == false
-      - idempotent_delete_dynamic.original == []
+      - idempotent_delete_dynamic.previous == []
