--- a/test/integration/targets/aci_epg/tasks/main.yml
+++ b/test/integration/targets/aci_epg/tasks/main.yml
@@ -74,7 +74,7 @@
   assert:
     that:
       - epg_present_check_mode.changed == true
-      - epg_present_check_mode.original == []
+      - epg_present_check_mode.previous == []
       - epg_present_check_mode.config.fvAEPg.attributes != {}
       - 'epg_present_check_mode.config.fvAEPg.children.0.fvRsBd.attributes.tnFvBDName == "anstest"'
       - epg_present.changed == true
@@ -103,11 +103,11 @@
   assert:
     that:
       - epg_query.changed == false
-      - epg_query.original | length == 1
-      - 'epg_query.original.0.fvAEPg.attributes.name == "anstest"'
+      - epg_query.previous | length == 1
+      - 'epg_query.previous.0.fvAEPg.attributes.name == "anstest"'
       - '"tn-anstest/ap-anstest/epg-anstest.json" in epg_query.url'
       - epg_query_all.changed == false
-      - epg_query_all.original | length > 1
+      - epg_query_all.previous | length > 1
       - '"rsp-subtree-class=fvRsBd" in epg_query_all.filter_string'
       - '"class/fvAEPg.json" in epg_query_all.url'
 
@@ -144,11 +144,11 @@
   assert:
     that:
       - delete_epg_check_mode.changed == true
-      - delete_epg_check_mode.original != []
+      - delete_epg_check_mode.previous != []
       - delete_epg.changed == true
-      - delete_epg.original == delete_epg_check_mode.original
+      - delete_epg.previous == delete_epg_check_mode.previous
       - delete_epg_idempotent.changed == false
-      - delete_epg_idempotent.original == []
+      - delete_epg_idempotent.previous == []
       - delete_epg_missing_param.failed == true
       - 'delete_epg_missing_param.msg == "state is absent but all of the following are missing: tenant"'
 
@@ -156,16 +156,16 @@
   aci_bd:
     <<: *aci_bd_present
     state: absent
-  when: bd_present.original == []
+  when: bd_present.previous == []
 
 - name: cleanup ap
   aci_ap:
     <<: *aci_ap_present
     state: absent
-  when: ap_present.original == []
+  when: ap_present.previous == []
 
 - name: cleanup tenant
   aci_tenant:
     <<: *aci_tenant_present
     state: absent
-  when: tenant_present.original == []
+  when: tenant_present.previous == []
