--- a/test/integration/targets/aci_filter_entry/tasks/main.yml
+++ b/test/integration/targets/aci_filter_entry/tasks/main.yml
@@ -111,16 +111,16 @@
   assert:
     that:
       - entry_present_check_mode.changed == true
-      - entry_present_check_mode.original == []
+      - entry_present_check_mode.previous == []
       - 'entry_present_check_mode.config == {"vzEntry": {"attributes": {"dFromPort": "http","dToPort": "88","descr": "Ansible Test","etherT": "ip","name": "anstest","prot": "tcp"}}}'
       - entry_present.changed == true
-      - entry_present.original == []
+      - entry_present.previous == []
       - entry_present.config == entry_present_check_mode.config
       - entry_present_idempotent.changed == false
-      - entry_present_idempotent.original != []
+      - entry_present_idempotent.previous != []
       - entry_present_idempotent.config == {}
       - entry_present_update.changed == true
-      - entry_present_update.original != []
+      - entry_present_update.previous != []
       - entry_present_update.config != entry_present_update.proposed
       - entry_present_2.changed == true
       - 'entry_present_2.config.vzEntry.attributes == {"arpOpc": "reply",  "etherT": "arp", "name": "anstest2"}'
@@ -188,44 +188,44 @@
   assert:
     that:
       - query_tenant_filter_entry.changed == false
-      - query_tenant_filter_entry.original | length == 1
-      - 'query_tenant_filter_entry.original.0.vzEntry.attributes.name == "anstest"'
+      - query_tenant_filter_entry.previous | length == 1
+      - 'query_tenant_filter_entry.previous.0.vzEntry.attributes.name == "anstest"'
       - '"tn-anstest/flt-anstest/e-anstest.json" in query_tenant_filter_entry.url'
       - query_filter_entry.changed == false
-      - 'query_filter_entry.original.0.vzFilter.attributes.name == "anstest"'
-      - query_filter_entry.original.0.vzFilter.children | length == 1
+      - 'query_filter_entry.previous.0.vzFilter.attributes.name == "anstest"'
+      - query_filter_entry.previous.0.vzFilter.children | length == 1
       - '"query-target-filter=eq(vzFilter.name, \"anstest\")" in query_filter_entry.filter_string'
       - '"rsp-subtree-filter=eq(vzEntry.name, \"anstest\")" in query_filter_entry.filter_string'
       - '"class/vzFilter.json" in query_filter_entry.url'
       - query_tenant_entry.changed == false
-      - query_tenant_entry.original | length == 1
-      - 'query_tenant_entry.original.0.fvTenant.attributes.name == "anstest"'
+      - query_tenant_entry.previous | length == 1
+      - 'query_tenant_entry.previous.0.fvTenant.attributes.name == "anstest"'
       - '"rsp-subtree-filter=eq(vzEntry.name, \"anstest\")" in query_tenant_entry.filter_string'
       - '"rsp-subtree-class=vzEntry" in query_tenant_entry.filter_string'
       - '"tn-anstest.json" in query_tenant_entry.url'
       - query_tenant_filter.changed == false
-      - query_tenant_filter.original | length == 1
-      - 'query_tenant_filter.original.0.vzFilter.attributes.name == "anstest"'
-      - query_tenant_filter.original.0.vzFilter.children | length == 4
+      - query_tenant_filter.previous | length == 1
+      - 'query_tenant_filter.previous.0.vzFilter.attributes.name == "anstest"'
+      - query_tenant_filter.previous.0.vzFilter.children | length == 4
       - '"rsp-subtree-class=vzEntry" in query_tenant_filter.filter_string'
       - '"tn-anstest/flt-anstest.json" in query_tenant_filter.url'
       - query_entry.changed == false
-      - 'query_entry.original.0.vzEntry.attributes.name == "anstest"'
+      - 'query_entry.previous.0.vzEntry.attributes.name == "anstest"'
       - '"query-target-filter=eq(vzEntry.name, \"anstest\")" in query_entry.filter_string'
       - '"class/vzEntry.json" in query_entry.url'
       - query_filter.changed == false
-      - 'query_filter.original.0.vzFilter.attributes.name == "anstest"'
+      - 'query_filter.previous.0.vzFilter.attributes.name == "anstest"'
       - '"query-target-filter=eq(vzFilter.name, \"anstest\")" in query_filter.filter_string'
       - '"rsp-subtree-class=vzEntry" in query_filter.filter_string'
       - '"class/vzFilter.json" in query_filter.url'
       - query_tenant.changed == false
-      - query_tenant.original | length == 1
-      - 'query_tenant.original.0.fvTenant.attributes.name == "anstest"'
+      - query_tenant.previous | length == 1
+      - 'query_tenant.previous.0.fvTenant.attributes.name == "anstest"'
       - '"rsp-subtree-class=vzFilter,vzEntry" in query_tenant.filter_string'
       - '"tn-anstest.json" in query_tenant.url'
       - query_all.changed == false
-      - query_all.original | length > 1
-      - query_all.original.0.vzEntry is defined
+      - query_all.previous | length > 1
+      - query_all.previous.0.vzEntry is defined
       - '"class/vzEntry.json" in query_all.url'
 
 - name: delete entry - check mode works
@@ -262,12 +262,12 @@
   assert:
     that:
       - entry_absent_check_mode.changed == true
-      - entry_absent_check_mode.original != []
+      - entry_absent_check_mode.previous != []
       - entry_absent.changed == true
-      - entry_absent.original == entry_absent_check_mode.original
+      - entry_absent.previous == entry_absent_check_mode.previous
       - entry_absent.proposed == {}
       - entry_absent_idempotent.changed == false
-      - entry_absent_idempotent.original == []
+      - entry_absent_idempotent.previous == []
       - absent_missing_param.failed == true
       - 'absent_missing_param.msg == "state is absent but all of the following are missing: entry, filter"'
 
