--- a/test/integration/targets/aci_vlan_pool_encap_block/tasks/main.yml
+++ b/test/integration/targets/aci_vlan_pool_encap_block/tasks/main.yml
@@ -65,7 +65,7 @@
   assert:
     that:
       - encap_block_present.changed == true
-      - encap_block_present.original == []
+      - encap_block_present.previous == []
       - encap_block_present.config == encap_block_present_check_mode.config
       - encap_block_present.config == encap_block_present.proposed
 
@@ -78,7 +78,7 @@
   assert:
     that:
       - encap_block_present_idempotent.changed == false
-      - 'encap_block_present_idempotent.original.0.fvnsEncapBlk.attributes.name == "anstest"'
+      - 'encap_block_present_idempotent.previous.0.fvnsEncapBlk.attributes.name == "anstest"'
 
 - name: Update vlan pool range - update works
   aci_vlan_pool_encap_block:
@@ -91,7 +91,7 @@
   assert:
     that:
       - encap_block_present_update.changed == true
-      - encap_block_present_update.original != []
+      - encap_block_present_update.previous != []
       - encap_block_present_update.config != encap_block_present.config
 
 - name: Create vlan pool range - used for query
@@ -106,7 +106,7 @@
   assert:
     that:
       - encap_block_present_2.changed == true
-      - encap_block_present_2.original == []
+      - encap_block_present_2.previous == []
 
 - name: Invalid encap_block_start - error message works
   aci_vlan_pool_encap_block:
@@ -209,8 +209,8 @@
     that:
       - encap_block_query.changed == false
       - encap_block_query.url.endswith("infra/vlanns-[anstest]-static/from-[vlan-20]-to-[vlan-40].json")
-      - encap_block_query.original | length == 1
-      - encap_block_query.original.0.fvnsEncapBlk.attributes.name == "anstest"
+      - encap_block_query.previous | length == 1
+      - encap_block_query.previous.0.fvnsEncapBlk.attributes.name == "anstest"
 
 - name: Query vlan pool range - from, to, and name are filtered
   aci_vlan_pool_encap_block: &aci_encap_block_query_filter
@@ -224,9 +224,9 @@
       - encap_block_query_from_to_name.changed == false
       - encap_block_query_from_to_name.url.endswith("class/fvnsEncapBlk.json")
       - '"query-target-filter=and(eq(fvnsEncapBlk.from, \"vlan-20\"),eq(fvnsEncapBlk.to, \"vlan-40\"),eq(fvnsEncapBlk.name, \"anstest\"))" in encap_block_query_from_to_name.filter_string'
-      - encap_block_query_from_to_name.original.0.fvnsEncapBlk.attributes.name == "anstest"
-      - encap_block_query_from_to_name.original.0.fvnsEncapBlk.attributes.from == "vlan-20"
-      - encap_block_query_from_to_name.original.0.fvnsEncapBlk.attributes.to == "vlan-40"
+      - encap_block_query_from_to_name.previous.0.fvnsEncapBlk.attributes.name == "anstest"
+      - encap_block_query_from_to_name.previous.0.fvnsEncapBlk.attributes.from == "vlan-20"
+      - encap_block_query_from_to_name.previous.0.fvnsEncapBlk.attributes.to == "vlan-40"
 
 - name: Query vlan pool range - from and name are filtered
   aci_vlan_pool_encap_block:
@@ -240,8 +240,8 @@
       - encap_block_query_from_name.changed == false
       - encap_block_query_from_name.url.endswith("class/fvnsEncapBlk.json")
       - '"query-target-filter=and(eq(fvnsEncapBlk.from, \"vlan-20\"),eq(fvnsEncapBlk.name, \"anstest\"))" in encap_block_query_from_name.filter_string'
-      - encap_block_query_from_name.original.0.fvnsEncapBlk.attributes.name == "anstest"
-      - encap_block_query_from_name.original.0.fvnsEncapBlk.attributes.from == "vlan-20"
+      - encap_block_query_from_name.previous.0.fvnsEncapBlk.attributes.name == "anstest"
+      - encap_block_query_from_name.previous.0.fvnsEncapBlk.attributes.from == "vlan-20"
 
 - name: Query vlan pool range - to and name are filtered
   aci_vlan_pool_encap_block:
@@ -255,8 +255,8 @@
       - encap_block_query_to_name.changed == false
       - encap_block_query_to_name.url.endswith("class/fvnsEncapBlk.json")
       - '"query-target-filter=and(eq(fvnsEncapBlk.to, \"vlan-40\"),eq(fvnsEncapBlk.name, \"anstest\"))" in encap_block_query_to_name.filter_string'
-      - encap_block_query_to_name.original.0.fvnsEncapBlk.attributes.name == "anstest"
-      - encap_block_query_to_name.original.0.fvnsEncapBlk.attributes.to == "vlan-40"
+      - encap_block_query_to_name.previous.0.fvnsEncapBlk.attributes.name == "anstest"
+      - encap_block_query_to_name.previous.0.fvnsEncapBlk.attributes.to == "vlan-40"
 
 - name: Query vlan pool range - name is filtered
   aci_vlan_pool_encap_block:
@@ -271,7 +271,7 @@
       - encap_block_query_name.changed == false
       - encap_block_query_name.url.endswith("class/fvnsEncapBlk.json")
       - '"query-target-filter=eq(fvnsEncapBlk.name, \"anstest\")" in encap_block_query_name.filter_string'
-      - encap_block_query_name.original.0.fvnsEncapBlk.attributes.name == "anstest"
+      - encap_block_query_name.previous.0.fvnsEncapBlk.attributes.name == "anstest"
 
 - name: Query vlan pool range - from and to are filtered
   aci_vlan_pool_encap_block:
@@ -285,8 +285,8 @@
       - encap_block_query_from_to.changed == false
       - encap_block_query_from_to.url.endswith("class/fvnsEncapBlk.json")
       - '"query-target-filter=and(eq(fvnsEncapBlk.from, \"vlan-20\"),eq(fvnsEncapBlk.to, \"vlan-40\"))" in encap_block_query_from_to.filter_string'
-      - encap_block_query_from_to.original.0.fvnsEncapBlk.attributes.from == "vlan-20"
-      - encap_block_query_from_to.original.0.fvnsEncapBlk.attributes.to == "vlan-40"
+      - encap_block_query_from_to.previous.0.fvnsEncapBlk.attributes.from == "vlan-20"
+      - encap_block_query_from_to.previous.0.fvnsEncapBlk.attributes.to == "vlan-40"
 
 - name: Query all ranges in a vlan pool
   aci_vlan_pool_encap_block:
@@ -298,9 +298,9 @@
 - name: Query assertions
   assert:
     that:
-      - encap_block_query_pool.original | length == 1
-      - encap_block_query_pool.original.0.fvnsVlanInstP.attributes.name == "anstest"
-      - encap_block_query_pool.original.0.fvnsVlanInstP.children | length > 1
+      - encap_block_query_pool.previous | length == 1
+      - encap_block_query_pool.previous.0.fvnsVlanInstP.attributes.name == "anstest"
+      - encap_block_query_pool.previous.0.fvnsVlanInstP.children | length > 1
       - encap_block_query_pool.url.endswith("infra/vlanns-[anstest]-static.json")
 
 - name: Query all ranges
@@ -314,8 +314,8 @@
   assert:
     that:
       - encap_block_query_all.changed == false
-      - encap_block_query_all.original | length > 1
-      - encap_block_query_all.original.0.fvnsEncapBlk is defined
+      - encap_block_query_all.previous | length > 1
+      - encap_block_query_all.previous.0.fvnsEncapBlk is defined
       - encap_block_query_all.url.endswith("class/fvnsEncapBlk.json")
 
 - name: Delete vlan pool range - deletion works
@@ -329,7 +329,7 @@
     that:
       - delete_range.changed == true
       - delete_range.proposed == {}
-      - delete_range.original.0.fvnsEncapBlk.attributes.name == "anstest"
+      - delete_range.previous.0.fvnsEncapBlk.attributes.name == "anstest"
 
 - name: Delete vlan pool range - check mode works
   aci_vlan_pool_encap_block: &aci_encap_block_absent
@@ -342,7 +342,7 @@
   assert:
     that:
       - delete_check_mode.changed == true
-      - delete_check_mode.original != []
+      - delete_check_mode.previous != []
 
 - name: Delete vlan pool range - deletion works
   aci_vlan_pool_encap_block:
@@ -353,7 +353,7 @@
   assert:
     that:
       - delete_encap_block_2.changed == true
-      - delete_encap_block_2.original == delete_check_mode.original
+      - delete_encap_block_2.previous == delete_check_mode.previous
 
 - name: Delete vlan pool range again - idempotency works
   aci_vlan_pool_encap_block:
@@ -364,7 +364,7 @@
   assert:
     that:
       - delete_idempotent.changed == false
-      - delete_idempotent.original == []
+      - delete_idempotent.previous == []
 
 - name: Cleanup vlan pool
   aci_vlan_pool:
