--- a/test/integration/targets/aci_vrf/tasks/main.yml
+++ b/test/integration/targets/aci_vrf/tasks/main.yml
@@ -67,11 +67,11 @@
       - 'vrf_present_check_mode.config == {"fvCtx": {"attributes": {"descr": "Ansible Test", "name": "anstest"}}}'
       - vrf_present.changed == true
       - vrf_present.config == vrf_present_check_mode.config
-      - vrf_present.original == []
+      - vrf_present.previous == []
       - vrf_present_idempotent.changed == false
-      - vrf_present_idempotent.original != []
+      - vrf_present_idempotent.previous != []
       - vrf_update.changed == true
-      - vrf_update.original != []
+      - vrf_update.previous != []
       - vrf_update.changed != vrf_update.proposed
       - 'vrf_update.config == {"fvCtx": {"attributes": {"descr": "Ansible Test Update", "pcEnfPref": "unenforced"}}}'
       - 'vrf_present_2.config.fvCtx.attributes == {"name": "anstest2", "pcEnfDir": "egress", "descr": "Ansible Test"}'
@@ -107,22 +107,22 @@
   assert:
     that:
       - query_all.changed == false
-      - query_all.original | length > 1
-      - query_all.original.0.fvCtx is defined
+      - query_all.previous | length > 1
+      - query_all.previous.0.fvCtx is defined
       - '"class/fvCtx.json" in query_all.url'
       - query_tenant.changed == false
-      - query_tenant.original | length == 1
-      - query_tenant.original.0.fvTenant.children | length == 2
-      - 'query_tenant.original.0.fvTenant.attributes.name == "anstest"'
+      - query_tenant.previous | length == 1
+      - query_tenant.previous.0.fvTenant.children | length == 2
+      - 'query_tenant.previous.0.fvTenant.attributes.name == "anstest"'
       - '"rsp-subtree-class=fvCtx" in query_tenant.filter_string'
       - '"tn-anstest.json" in query_tenant.url'
       - query_vrf_vrf.changed == false
-      - query_vrf_vrf.original != []
-      - 'query_vrf_vrf.original.0.fvCtx.attributes.name == "anstest"'
+      - query_vrf_vrf.previous != []
+      - 'query_vrf_vrf.previous.0.fvCtx.attributes.name == "anstest"'
       - '"query-target-filter=eq(fvCtx.name, \"anstest\")" in query_vrf_vrf.filter_string'
       - '"class/fvCtx.json" in query_vrf_vrf.url'
       - query_vrf.changed == false
-      - query_vrf.original | length == 1
+      - query_vrf.previous | length == 1
       - '"tn-anstest/ctx-anstest.json" in query_vrf.url'
 
 - name: delete vrf - check mode works
@@ -158,12 +158,12 @@
   assert:
     that:
       - vrf_absent_check_mode.changed == true
-      - vrf_absent_check_mode.original != []
+      - vrf_absent_check_mode.previous != []
       - vrf_absent_check_mode.proposed == {}
       - vrf_absent.changed == true
-      - vrf_absent.original == vrf_absent_check_mode.original
+      - vrf_absent.previous == vrf_absent_check_mode.previous
       - vrf_absent_idempotent.changed == false
-      - vrf_absent_idempotent.original == []
+      - vrf_absent_idempotent.previous == []
       - vrf_absent_missing_param.failed == true
       - 'vrf_absent_missing_param.msg == "state is absent but all of the following are missing: vrf"'
 
